# sleev

./: README.md  pyproject.toml  ruff.toml
src/sleev/: __init__.py  cli.py  icons.py  images.py  musicbrainz.py  scan.py
src/sleev/commands/: get.py  iconify.py
tests/: test_cli.py  test_get.py  test_iconify.py  test_images.py  test_scan.py
