[project]
name = "sleev"
version = "0.1.0"
description = "Fetch album cover art from the Cover Art Archive for folders of music"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "mutagen>=1.47",
]

[project.scripts]
sleev = "sleev.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sleev"]

[dependency-groups]
dev = ["pytest>=8.0"]
